fixing issues with text color and spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@ header {
 
 body {
     background-color:rgb(37, 37, 37);
+    height: 94vh;
 }
 
 h1 {
@@ -26,6 +27,7 @@ h1 {
     margin-top: 10rem;
     padding-bottom: 4rem;
     border-radius: 1rem;
+    margin-bottom: 10rem;
 }
 
 .main {
@@ -56,6 +58,7 @@ blockquote {
     padding-bottom: 3rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    display: flex;
 }
 
 cite {
@@ -86,14 +89,26 @@ details {
     background-color:rgb(138, 138, 138);
     width: 25%;
     margin-bottom: 1rem;
-    border-style: solid;
-    border-width: 2px;
+    /* border-style: solid; */
+    /* border-width: 2px; */
     border-radius: 0.3rem;
-    padding-top: 0.25rem;
+    padding-top: 0.5rem;
     padding-bottom: 0.25rem;
 }
 
 button {
-    background-color: rgb(218, 170, 39);;
-    border-radius: 10%;
+    background-color: rgb(29, 221, 221);
+    border-radius: 1rem;
+    color:rgb(34, 34, 34);
+    width: 300%;
+    margin-left: -6rem;
+    margin-bottom: -5rem;
+}
+
+.drop_down {
+    width: 100%;
+}
+
+blockquote {
+    color:rgb(34, 34, 34);
 }
